--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -1,3 +1,155 @@
+/* ======================= global settings ==================================================== */
 .root {
     -fx-padding: 10px;
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 10;
+    /* Block coloring for background */
+    -fx-background-color: linear-gradient(
+            to bottom,
+            #39A67F 0%,
+            #39A67F 20%,
+            #ffffff 20%,
+            #ffffff 100%
+    );
+}
+
+.split-pane {
+    -fx-padding: 10;
+    -fx-background-color: transparent;
+}
+
+.split-pane > .split-pane-divider {
+    -fx-padding: 0 0.75em 0 0.75em;
+    -fx-background-color: transparent;
+}
+
+/* ======================= selector bar settings ==================================================== */
+.button {
+    -fx-background-color: #EBF5F1;
+}
+
+.selectorbar .text-field {
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #a9a9a9 , #39A67F , #39A67F;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
+.selectorbar .choice-box {
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #39A67F;
+}
+.selectorbar .context-menu {
+    -fx-background-color: #39A67F;
+}
+
+.selectorbar .choice-box .menu-item > .label {
+    -fx-text-fill: white; }
+
+.selectorbar .choice-box > .label {
+    -fx-text-fill: white; }
+
+.selectorbar .choice-box .arrow-button {
+    -fx-background-color: transparent;
+}
+
+.selectorbar .choice-box .arrow {
+    -fx-shape: "M8.124,13.625l4.125-3.375v2.889l-4.125,3.86L4,13.139V10.25L8.124,13.625z";
+    -fx-background-color: white;
+}
+
+/* ======================= overview settings ==================================================== */
+.overview {
+    -fx-background-color: #EBF5F1;
+}
+
+/* ======================= header settings ==================================================== */
+.header {
+    -fx-background-color: #EBF5F1;
+}
+.header .label {
+    -fx-text-fill: #999999;
+}
+.header #titleLabel{
+    -fx-font-size: 18;
+    -fx-font-weight: bold;
+    -fx-text-fill: #39A67F;
+}
+
+/* ======================= editor settings ==================================================== */
+.editor {
+    -fx-background-color: #EBF5F1;
+}
+
+.editor .label {
+    -fx-text-fill: #999999;
+}
+
+.editor .text-field {
+    -fx-text-fill: #999999;
+    -fx-background-color: #a9a9a9 , #EBF5F1 , #EBF5F1;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
+
+/* MR, 31.05.2018: Focusing disabled
+.editor .text-field:focused {
+    -fx-background-color: #a9a9a9 , white , white;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
+*/
+
+.editor .choice-box {
+    -fx-text-fill: #999999;
+    -fx-background-color: #EBF5F1;
+}
+.editor .context-menu {
+    -fx-background-color: #EBF5F1;
+}
+
+.editor .choice-box .menu-item > .label {
+    -fx-text-fill: #999999; }
+
+.editor .choice-box > .label {
+    -fx-text-fill: #999999; }
+
+.editor .choice-box .arrow-button {
+    -fx-background-color: transparent;
+}
+
+.editor .choice-box .arrow {
+    -fx-shape: "M8.124,13.625l4.125-3.375v2.889l-4.125,3.86L4,13.139V10.25L8.124,13.625z";
+    -fx-background-color: #999999;
+}
+
+/* ======================= footer settings ==================================================== */
+.footer {
+    -fx-background-color: #EBF5F1;
+}
+
+/* ======================= tables ==================================================== */
+.table-view {
+    -fx-base: #EBF5F1;
+    -fx-control-inner-background: #EBF5F1;
+    -fx-background-color: #EBF5F1;
+    -fx-table-cell-border-color: #ffffff;
+    -fx-padding: 5;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-border-width: 0 0 1 0;
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-insets: 0 10 1 0;
+}
+
+.table-view .column-header .label {
+    -fx-text-fill: #39A67F;
+    -fx-alignment: center-left;
+    -fx-background-color: transparent;
+}
+
+.table-view:focused .table-row-cell:filled:focused:selected {
+    -fx-background-color: -fx-focus-color;
 }
