--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -7,14 +7,14 @@
     -fx-background-color: linear-gradient(
             to bottom,
             #39A67F 0%,
-            #39A67F 20%,
-            #ffffff 20%,
+            #39A67F 30%,
+            #ffffff 30%,
             #ffffff 100%
     );
 }
 
 .split-pane {
-    -fx-padding: 10;
+    -fx-padding: 3 10 10 10;
     -fx-background-color: transparent;
 }
 
@@ -55,6 +55,12 @@
 .selectorbar .choice-box .arrow {
     -fx-shape: "M8.124,13.625l4.125-3.375v2.889l-4.125,3.86L4,13.139V10.25L8.124,13.625z";
     -fx-background-color: white;
+}
+
+.selectorbar #titleLabel{
+    -fx-font-size: 22;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffff;
 }
 
 /* ======================= overview settings ==================================================== */
