Input validation added

--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -126,6 +126,14 @@
     -fx-background-color: #999999;
 }
 
+.editor #inputValidatorLabel{
+    -fx-font-size: 9;
+    -fx-font-style: italic;
+    -fx-font-weight: bold;
+    -fx-text-fill: #EA6B66;
+    -fx-padding: 5 0 0 0;
+}
+
 /* ======================= footer settings ==================================================== */
 .footer {
     -fx-background-color: #EBF5F1;
