--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -63,9 +63,13 @@
     -fx-text-fill: #ffff;
 }
 
-/* ======================= overview settings ==================================================== */
+/* ======================= detailview settings ==================================================== */
 .overview {
     -fx-background-color: #EBF5F1;
+    -fx-min-width: 350;
+    -fx-max-width: 500;
+    -fx-pref-width: 300;
+    -fx-max-height: 1000 ;
 }
 
 /* ======================= header settings ==================================================== */
