--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -88,6 +88,9 @@
 /* ======================= editor settings ==================================================== */
 .editor {
     -fx-background-color: #EBF5F1;
+    -fx-hgap: 10;
+    -fx-vgap: 3;
+    -fx-padding: 5,5,5,5;
 }
 
 .editor .label {
