--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -105,12 +105,13 @@
     -fx-max-width: 500;
     -fx-pref-width: 300;
     -fx-max-height: 1000 ;
+    -fx-padding: 5 5 5 5;
 }
 
 /* ======================= header settings ==================================================== */
 .header {
     -fx-background-color: #EBF5F1;
-    -fx-padding: 5;
+    -fx-padding: 10 10 10 10;
     -fx-spacing: 5;
 }
 
@@ -128,7 +129,7 @@
     -fx-background-color: #EBF5F1;
     -fx-hgap: 10;
     -fx-vgap: 3;
-    -fx-padding: 5,5,5,5;
+    -fx-padding: 10 10 10 10;
 }
 
 .editor .label {
@@ -197,6 +198,7 @@
     -fx-min-height: 210;
     -fx-max-height: 220;
     -fx-pref-height: 220;
+    -fx-padding: 5 5 5 5;
 }
 
 /* ======================= map settings ==================================================== */
@@ -204,6 +206,5 @@
     -fx-min-height: 210;
     -fx-max-height: 220;
     -fx-pref-height: 220;
-    -fx-padding: 5;
-    -fx-spacing: 5;
+    -fx-padding: 5 5 5 5;
 }
