Map resizing fixed

--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -205,6 +205,6 @@
 .map {
     -fx-min-height: 210;
     -fx-max-height: 220;
+    -fx-max-width: 300;
     -fx-pref-height: 220;
-    -fx-padding: 5 5 5 5;
 }
