Image display modified

--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/control/watercontrol/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/control/watercontrol/style.css
@@ -1,6 +1,6 @@
 
 .text-display{
-    -fx-font-family: 'Lato Light';
-    -fx-font-size: 18;
+    -fx-font-family: 'Helvetica';
+    -fx-font-size: 28;
     -fx-font-weight: bold;
 }
