--- a/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
+++ b/src/main/java/ch/fhnw/oop2/hydropowerfx/view/style.css
@@ -102,7 +102,6 @@
 .overview {
     -fx-background-color: #EBF5F1;
     -fx-min-width: 350;
-    -fx-max-width: 400;
     -fx-pref-width: 300;
     -fx-padding: 5 5 5 5;
 }
@@ -116,6 +115,7 @@
 
 .header .label {
     -fx-text-fill: #999999;
+    -fx-font-size: 14;
 }
 .header #titleLabel{
     -fx-font-size: 18;
@@ -194,7 +194,7 @@
 /* ======================= summary settings ==================================================== */
 .summary {
     -fx-background-color: #EBF5F1;
-    -fx-min-height: 150;
+    -fx-min-height: 220;
     -fx-max-height: 220;
     -fx-pref-height: 300;
     -fx-padding: 5 5 5 5;
@@ -202,7 +202,7 @@
 
 /* ======================= map settings ==================================================== */
 .map {
-    -fx-min-height: 150;
+    -fx-min-height: 220;
     -fx-max-height: 220;
     -fx-max-width: 300;
     -fx-pref-height: 300;
